Fixed Conversion depreciations